<resources>
    <string name="app_name">hbv601g_t8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="contact_customer_service">Customer service</string>
    <string name ="radius_all">Radius filter off: displaying discs regardless of seller\'s location. Adjust slider below to refine search radius.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="go_to_messages">Go to messages</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="images">images</string>
    <string name="go_to_next_image">Go to next image</string>
    <string name="go_to_previous_image">Go to previous image</string>
    <string name="change">Change</string>
    <string name="user_name">User name:</string>
    <string name="email_">Email:</string>
    <string name="password_">Password:</string>
    <string name="password_hidden">**********</string>
    <string name="delete_account">Delete account</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="delete_account_warning">This will permanently delete your account, this action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="message_owner">Message Owner</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="channel_name">My Notification Channel</string>
    <string name="channel_description">Channel for displaying important notifications</string>
    <string name="kr">%1$s Kr.</string>
    <string name="my_discs">My Discs</string>
    <string name="edit_disc">Edit Disc</string>
    <string name="add_a_new_disc">Add a new disc</string>
    <string name="submit">Submit</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="disc_type">Disc Type</string>
    <string name="disc_state">Disc state</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="submit_new_disc">Submit New Disc</string>
    <string name="update_info">Update</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters</string>
    <string name="filter">Filter</string>
    <string name="clear_filter">Clear</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="type_your_message">Your message here…</string>
    <string name="type_your_subject">Message subject…</string>
    <string name="join_call">Join Call</string>
    <string name="leave_call">Leave Call</string>
    <string name="send">Send</string>
    <string-array name="filter_states">
        <item>Any</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="filter_disc_types">
        <item>Any</item>
        <item>Putter</item>
        <item>Mid-Range</item>
        <item>Driver</item>
        <item>Distance Driver</item>
    </string-array>
    <string-array name="disc_states">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="disc_types">
        <item>Putter</item>
        <item>Mid-Range</item>
        <item>Driver</item>
        <item>Distance Driver</item>
    </string-array>
</resources>