<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NewDiscActivity">


    <ImageView
        android:id="@+id/viewImage"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/take_photo"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/choose_photo"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/newDiscTitle"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="12sp"/>

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/disc_state"
        android:textSize="12sp"
        android:entries="@array/disc_states"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:hint="@string/disc_type"
        android:textSize="12sp"
        android:entries="@array/disc_types"/>

    <EditText
        android:id="@+id/newDiscColor"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:hint="@string/color"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/newDiscPrice"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:hint="@string/price"
        android:inputType="number"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/newDiscDescription"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:hint="@string/description"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/newDiscQuantity"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/submitNewDiscButton"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/submit_new_disc"
        android:textSize="18sp"/>

</LinearLayout>