<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/password_should_be_at_least_6_characters"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/new_password1"
        android:background="@drawable/custom_login"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="8dp"
        android:hint="@string/new_password"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/new_password2"
        android:background="@drawable/custom_login"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:hint="@string/confirm_password"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_password"
        android:backgroundTint="@color/Lavender"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"/>

</LinearLayout>