<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/current_email"
        android:background="@drawable/custom_login"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="8dp"
        android:hint="@string/current_email"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/new_email"
        android:background="@drawable/custom_login"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:hint="@string/new_email"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_email"
        android:backgroundTint="@color/Lavender"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"/>

</LinearLayout>