<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:background="@drawable/custom_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/loginText"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/Lavender"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/username"
            android:background="@drawable/custom_login"
            android:layout_marginTop="40dp"
            android:padding="8dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:drawablePadding="8dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:background="@drawable/custom_login"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Lavender"
            app:cornerRadius = "20dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>