<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede"
    tools:context=".ViewDiscActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Lavender"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:contentDescription="@string/images"
        android:scaleType="centerInside">
    </ImageView>

    <Button
        android:id="@+id/next_image"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:contentDescription="@string/go_to_next_image"/>

    <Button
        android:id="@+id/previous_image"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:translationX="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:contentDescription="@string/go_to_previous_image"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:id="@+id/table">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:outlineAmbientShadowColor="#6A4B4B"
            android:outlineSpotShadowColor="#070606">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/almost_black"
                android:textSize="15sp" />
        </TableRow>

        <View style="@style/Divider"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/condition" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/almost_black"
                android:textSize="15sp"
                android:id="@+id/condition"/>
        </TableRow>

        <View style="@style/Divider"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/type" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/almost_black"
                android:textSize="15sp"
                android:id="@+id/type"/>
        </TableRow>

        <View style="@style/Divider"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/almost_black"
                android:textSize="15sp"
                android:id="@+id/color"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        app:layout_constraintTop_toBottomOf="@+id/table"
        android:id="@+id/description"
        android:layout_marginTop="7dp"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textSize="15sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>