<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dedede"
    tools:context=".DiscActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/Lavender"
        android:fitsSystemWindows="true"
        app:title="Settings">
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">


    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:id="@+id/user_info">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/rl_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:gravity="bottom"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingBottom="5dp"/>

            <Button
                android:id="@+id/change_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white"
                android:text="@string/change"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <View style="@style/Divider"
            android:layout_below="@+id/rl_name"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/rl_email"
            android:layout_below="@+id/rl_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:gravity="bottom"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingBottom="5dp"/>

            <Button
                android:id="@+id/change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white"
                android:text="@string/change"
                android:textColor="@color/black"/>
        </RelativeLayout>


        <View style="@style/Divider"
            android:layout_below="@+id/rl_email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/rl_password"
            android:layout_below="@+id/rl_email">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:gravity="bottom"
                android:text="@string/password_hidden"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingBottom="5dp"/>

            <Button
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white"
                android:text="@string/change"
                android:textColor="@color/black"/>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/danger"
        android:text="@string/delete_account"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/delete_account"/>

</RelativeLayout>

